[package]
name = "galaxy-buds-client-cli"
version = "0.1.0"
edition = "2021"
license = "GPL-3.0"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
galaxy_buds_rs = { git = "https://github.com/JojiiOfficial/GalaxyBuds-rs" }
#galaxy_buds_rs = "0.2.10"
#galaxy_buds_rs = { path = "../GalaxyBuds-rs" }
clap = { version = "4.4.16", features = ["std"] }
clap_complete = "4.4.6"
async-std = { version = "1.12.0", features = ["attributes"] }
bluetooth-serial-port-async = "0.6.3"
blurz = "0.4.0"
ofiles = "0.2.0"
serde = { version = "1.0.195", features = ["derive"] }
serde_json = "1.0.111"
notify-rust = "4.10.0"
toml = "0.8.8"
mpris = "2.0.0-rc2"
clap_generate = "3.0.3"
nix = "0.27.1"
rust-pulsectl-fork = { version = "0.2.12", optional = true }
human-panic = "1.2.3"
log = "0.4.20"
pretty_env_logger = "0.5.0"

[features]
default = ["pulse-sink"]
pulse-sink = ["rust-pulsectl-fork"]
